--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <script src="js/lesson1.js"></script>
 <script src="js/lesson2.js"></script>
 <script src="js/lesson3.js"></script>
+<script src="js/lesson4.js"></script>
+
 
 </body>
 </html>
